<resources>
    <string name="app_name">INFORMASI HEWAN</string>
    
    //Layout
    <string name="nama_aplikasi">INFORMASI HEWAN</string>
    <string name="burung">BURUNG</string>
    <string name="ikan">IKAN</string>
    <string name="serangga">SERANGGA</string>
    <string name="klik">(Klik Gambar Hewan Untuk Melihat Lebih Banyak)</string>
    <string name="tentang_saya">Tentang Saya</string>
    <string name="daftar_title">"DAFTAR BERBAGAI RAS "</string>
    <string name="burung_title">Burung</string>
    <string name="ikan_title">Ikan</string>
    <string name="serangga_title">Serangga</string>
    
    //Biodata
    <string name="mahasiswa">BIODATA MAHASISWA</string>
    <string name="nama">Nama : M. Fatih Fahrurozi</string>
    <string name="nim">Nim : 200602014</string>
    <string name="prodi">Prodi : Teknik Informatika</string>
    <string name="fakultas">Fakultas : Teknik</string>
    <string name="hobi">Hobi : Basket,Nyanyi,Futsal</string>
   
    //Data Burung
    <string name="kenari_nama">Kenari Yorkshire</string>
    <string name="kenari_asal">INGGRIS</string>
    <string name="kenari_deskripsi">\"Kenari Yorkshire merupakan jenis burung kicau bersuara merdu yang berasal dari Inggris. \"</string>
    <string name="murai_nama">Murai Batu</string>
    <string name="murai_asal">INDONESIA</string>
    <string name="murai_deskripsi">\"Jenis burung yang satu ini dikenal juga dengan sebutan kurica hutan. Di Indonesia sendiri, burung jenis ini banyak ditemui di daerah Pulau Sumatera. \"</string>
    <string name="love_nama">Love Bird</string>
    <string name="love_asal">INDONESIA</string>
    <string name="love_deskripsi">Love Birds merupakan jenis burung kicau yang satu ini memiliki suara kicauan yang keras, lantang, dan merdu.</string>
    <string name="cucak_nama">Cucak Rowo</string>
    <string name="cucak_asal">INDONESIA</string>
    <string name="cucak_deskripsi">\"Cucak Rowo merupakan jenis burung kicau yang mumpuni. Di mana burung ini dapat mengeluarkan suara kicauan yang keras, jernih, dan menggema. \"</string>
    <string name="jalak_nama">Jalak Bali</string>
    <string name="jalak_asal">INDONESIA</string>
    <string name="jalak_deskripsi">\"Jalak Bali (Leucopsar rothschildi) adalah sejenis burung pengicau berukuran sedang, dengan panjang lebih kurang 25cm,[1] dari suku Sturnidae. \"</string>
    
    //Daftar Ikan
    <string name="cupak_nama">Ikan Cupang</string>
    <string name="cupang_asal">INDONESIA</string>
    <string name="cupang_deskripsi">\"Cupang, ikan laga, atau ikan adu siam adalah ikan air tawar yang habitat asalnya adalah beberapa negara di Asia Tenggara, antara lain Indonesia, Thailand, Malaysia, Brunei Darussalam, Singapura,dan Vietnam. \"</string>
    <string name="hiu_nama">Ikan Hiu</string>
    <string name="hiu_asal" translatable="false">Lautan Dunia</string>
    <string name="hiu_deskripsi">\" Merupakan salah satu Predator yang sangat mematikan yang ada di laut.\"</string>
    <string name="guppy_nama">Ikan Guppy</string>
    <string name="guppy_asal">AMERIKA SELATAN</string>
    <string name="guppy_deskripsi">Ikan Guppy memiliki bentuk tubuh seperti wanita yang mengenakan rok. Bentuknya juga menarik karena ikan ini memiliki ukuran yaitu kurang dari 2,5 cm jika diukur dari kepala ke ekor.</string>
    <string name="molly_nama">\" Ikan Molly\"</string>
    <string name="molly_asal">INDONESIA</string>
    <string name="molly_deskripsi">\"Ikan Molly sering juga disebut dengan ikan balon karena kebanyakan ikan molly memiliki perut yang buncit dan tubuh yang bundar. \"</string>
    <string name="koki_nama">Ikan Mas Koki</string>
    <string name="koki_asal">INDONESIA</string>
    <string name="koki_deskripsi">Ikan ini memiliki karakteristik perut buncit dan warna yang cerah dan cantik yang membuat banyak orang menyukainya.</string>
    
    //Data Serangga
    <string name="kepik_nama">Kepik Pembajak</string>
    <string name="kepik_asal">INDONESIA</string>
    <string name="kepik_deskripsi">\" serangga ini merupakan serangga yang mengonsumsi berbagai jenis telur dari hama pengganggu yang menempel pada daun di tanaman.\"</string>
    <string name="lebah_nama">Lebah Madu</string>
    <string name="lebah_asal">ASIA</string>
    <string name="lebah_deskripsi">Lebah merupakan serangga yang membantu bunga dan tanaman lain dalam proses penyerbukan agar tanaman bisa tumbuh dan berkembang dengan mudahnya.</string>
    <string name="laba_nama">Laba-Laba</string>
    <string name="laba_asal">SELURUH DUNIA</string>
    <string name="laba_deskripsi">\"Laba-laba merupakan salah satu serangga yang ampuh untuk membasmi berbagai serangga yang mengganggu lainnya. \"</string>
    <string name="ladygup_nama">Kepik Ladygup</string>
    <string name="ladygup_asal">INDONESIA.</string>
    <string name="ladygup_deskripsi">\" Kepik jenis ini akan menjadi predator dan memakan berbagai jenis serangga berbeda yang mengganggu tanaman di rumah.\"</string>
    <string name="lace_nama">Lacewings</string>
    <string name="lace_asal">INDONESIA.</string>
    <string name="lace_deskripsi">Lacewings atau singa kutu merupakan sebuah serangga yang tubuhnya memiliki warna kehijauan dan seolah tampak transparan.</string>
</resources>
